# akashi

./: .dockerignore  .env.example  .gitignore  .golangci.yml  01-shared-agent-context-infrastructure.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_INDEX.md  PROJECT_STRUCTURE.md  PROMPT-DATA-QUALITY.md  PROMPT.md  README.md  SECURITY.md  SPEC-DATA-QUALITY.md  akashi.go  atlas.hcl  docker-compose.complete.yml  docker-compose.yml  go.mod  go.sum  helpers_test.go  interfaces.go  options.go  types.go
.claude/: settings.json.example
.cursor/: hooks.json
.github/: pull_request_template.md
adrs/: ADR-001-go-server-language.md  ADR-002-unified-postgres-storage.md  ADR-003-event-sourced-bitemporal-model.md  ADR-004-distribution-mcp-and-frameworks.md  ADR-004-mcp-primary-distribution.md  ADR-005-auth-rbac.md  ADR-005-competitive-positioning.md  ADR-006-embedding-provider-chain.md  ADR-006-standards-alignment.md  ADR-007-dual-postgres-connections.md  ADR-008-timescaledb-event-ingestion.md  ADR-009-distribution-local-lite-and-cloud-mcp.md  ADR-010-rescore-weight-calibration.md  ADR-011-proof-leaves-retention-survival.md  ADR-012-outbox-sync-pattern.md  (+4 more)
api/: embed.go  (+1 more)
sdk/integrations/crewai/: README.md  pyproject.toml
sdk/integrations/crewai/src/akashi_crewai/: __init__.py  _crew.py  _hooks.py
sdk/integrations/crewai/tests/: test_crew.py  test_hooks.py
sdk/integrations/langchain/: README.md  pyproject.toml
sdk/integrations/langchain/src/akashi_langchain/: __init__.py  _handler.py
sdk/integrations/langchain/tests/: test_handler.py
(+540 files in other folders)
