[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akashi-crewai"
version = "0.1.0"
description = "CrewAI hooks for Akashi decision tracing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "akashi>=0.1.0",
    "crewai>=0.70,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/akashi_crewai"]
