[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akashi-langchain"
version = "0.1.0"
description = "LangChain callback handler for Akashi decision tracing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "akashi>=0.1.0",
    "langchain-core>=0.3,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/akashi_langchain"]
